@@ -19,7 +19,7 @@
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
          <classifier>jdk15</classifier>
-         <version>5.10</version>
+         <version>5.11</version>
          <scope>test</scope>
       </dependency>
       <dependency>
